--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,14 +19,17 @@
 <resources>
     <string name="app_name">Skill India</string>
 
-    <string name="login_success">login success</string>
     <string name="login">LOGIN</string>
-    <string name="Username">Username</string>
-    <string name="Password">Password</string>
-    <string name="forgot_your_password">Forgot your password ?</string>
+    <string name="name">Name</string>
+    <string name="aadhaar">Aadhaar No</string>
+    <string name="department">Department</string>
+    <string name="year">Year</string>
+    <string name="email">Email</string>
+    <string name="mobile">Mobile</string>
+    <string name="password">Password</string>
+    <string name="forgot_your_password">Forgot your password?</string>
     <string name="go">GO</string>
     <string name="repeat_password">Repeat Password</string>
-    <string name="next">NEXT</string>
     <string name="register">REGISTER</string>
 
     <string name="state_spinner_label">State</string>
