--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,8 @@
     <string name="hello_activity_button_next">NEXT</string>
     <string name="hello_activity_textview_tos">By using dropBuy, you are agreeing to the</string>
     <string name="hello_activity_button_start">GET STARTED</string>
+
+    <string name="title_activity_switch">SwitchActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello %1$d</string>
 </resources>
