--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,5 @@
 
     <string name="title_activity_switch">SwitchActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello %1$d</string>
+    <string name="section_format">Hello %1$s</string>
 </resources>
