--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,18 +49,20 @@
     <string name="hello_activity_terms">Terms of Use</string>
     <string name="hello_activity_subhead">We just need a few quick things before getting you started.</string>
     <string name="hello_activity_name">Name</string>
-    <string name="hello_activity_email">Email</string>
+    <string name="hello_activity_mobile">Mobile No.</string>
     <string name="hello_activity_address">Address</string>
-    <string name="hello_activity_country">Country</string>
+    <string name="hello_activity_state">State</string>
+    <string name="hello_activity_district">District</string>
     <string name="hello_activity_gender">Gender</string>
     <string name="hello_activity_age">Age</string>
-    <string name="hello_activity_mobile">Mobile No.</string>
+    <string name="hello_activity_email">Email</string>
+    <string name="hello_activity_password">Password</string>
     <string name="hello_activity_age_invalid">Please enter a valid age.</string>
 
     <string name="hello_activity_share_data">Share anonymous data for research.</string>
     <string name="hello_activity_hint_settings">You can change these in settings later.</string>
     <string name="hello_activity_button_next">NEXT</string>
-    <string name="hello_activity_textview_tos">By using dropBuy, you are agreeing to the</string>
+    <string name="hello_activity_textview_tos">By using Skill India, you are agreeing to the</string>
     <string name="hello_activity_button_start">GET STARTED</string>
 
     <string name="title_activity_switch">SwitchActivity</string>
