--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,12 +68,19 @@
     <string name="title_activity_switch">SwitchActivity</string>
     <string name="action_settings">Settings</string>
 
-    <string name="drawer_item_home">Home</string>
-    <string name="drawer_item_free_play">Free Play</string>
-    <string name="drawer_item_custom">Custom</string>
-    <string name="drawer_item_section_header">Section Header</string>
-    <string name="drawer_item_settings">Settings</string>
-    <string name="drawer_item_help">Help</string>
-    <string name="drawer_item_open_source">Open Source</string>
+    <string name="drawer_item_search_center">Search Training Center</string>
+    <string name="drawer_item_search_courses">Search Training Courses</string>
+    <string name="drawer_item_world_competition">World Skills Competition</string>
+    <string name="drawer_item_check_progress">Check Progress</string>
+    <string name="drawer_item_webinars">Webinars</string>
+    <string name="drawer_item_register_pmkvy">Register in PMKVY</string>
+    <string name="drawer_item_report_issues">Report Issues</string>
     <string name="drawer_item_contact">Contact</string>
+
+    <string name="drawer_item_upload_resume">Upload Resume</string>
+    <string name="drawer_item_upload_webinars">Upload Webinars</string>
+    <string name="drawer_item_register_nsdc">Register in NSDC</string>
+
+    <string name="drawer_item_tenders">Tenders / RFPs</string>
+    <string name="drawer_item_contribute_csr">Contribute to CSR Funds</string>
 </resources>
