--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,21 +82,22 @@
     <string name="title_activity_switch">SwitchActivity</string>
     <string name="action_settings">Settings</string>
 
-    <string name="drawer_item_search_center">Search Training Center</string>
     <string name="drawer_item_search_courses">Search Training Courses</string>
-    <string name="drawer_item_world_competition">World Skills Competition</string>
-    <string name="drawer_item_check_progress">Check Progress</string>
+    <string name="drawer_item_search_center">Search Training Center</string>
     <string name="drawer_item_webinars">Webinars</string>
-    <string name="drawer_item_register_pmkvy">Register in PMKVY</string>
+    <string name="drawer_item_check_progress">Check Progress</string>
+    <string name="drawer_item_world_competition">World Skills Competition</string>
     <string name="drawer_item_report_issues">Report Issues</string>
-    <string name="drawer_item_contact">Contact</string>
+    <string name="drawer_item_contact_trainer">Contact Trainer</string>
 
-    <string name="drawer_item_upload_resume">Upload Resume</string>
     <string name="drawer_item_upload_webinars">Upload Webinars</string>
-    <string name="drawer_item_register_nsdc">Register in NSDC</string>
+    <string name="drawer_item_contact_training_center">Contact Training Center</string>
+    <string name="drawer_item_update_skill_set">Update Skill Set</string>
 
-    <string name="drawer_item_tenders">Tenders / RFPs</string>
-    <string name="drawer_item_contribute_csr">Contribute to CSR Funds</string>
+    <string name="drawer_item_setup_training_center">Setup Training Center</string>
+    <string name="drawer_item_manage_trainers">Manage Trainers</string>
+    <string name="drawer_item_enroll_learner_pmkvy">Enroll Learner under PMKVY</string>
+    <string name="drawer_item_become_nsdc_partner">Become a NSDC Partner</string>
 
     <string name="search_no_training_centers">No training centers found</string>
 
