--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,12 @@
     <string name="dashboard">Dashboard</string>
     <string name="learner">Learner</string>
     <string name="trainer">Trainer</string>
-    <string name="private_sector">Private Sector</string>
+    <string name="training_partner">Training Partner</string>
+
+    <string name="learner_description">Enroll into courses and develop your skills</string>
+    <string name="trainer_description">Enroll into courses and develop your skills</string>
+    <string name="training_partner_description">Enroll into courses and develop your skills</string>
+    <string name="contribute_csr_description">Enroll into courses and develop your skills</string>
 
     <string name="menu_help">Help</string>
     <string name="menu_map">Map</string>
@@ -99,6 +104,8 @@
     <string name="drawer_item_manage_trainers">Manage Trainers</string>
     <string name="drawer_item_enroll_learner_pmkvy">Enroll Learner under PMKVY</string>
     <string name="drawer_item_become_nsdc_partner">Become a NSDC Partner</string>
+
+    <string name="drawer_item_contribute_csr">Contribute CSR Funds</string>
 
     <string name="search_no_training_centers">No training centers found</string>
 
