--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~  You should have received a copy of the GNU General Public License
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
-  --><resources>
+  -->
+
+<resources>
     <string name="app_name">"कौशल भारत"</string>
 
     <string name="dashboard">"डैशबोर्ड"</string>
