--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,9 @@
     <string name="drawer_item_log_out">Log Out</string>
 
     <string name="menu_help">Help</string>
-    <string name="menu_sort">Sort</string>
+    <string name="menu_sort_rating">Sort by Rating</string>
+    <string name="menu_sort_distance">Sort by Distance</string>
+    <string name="menu_sort_course_fee">Sort by Course Fee</string>
     <string name="menu_map">Map</string>
 
     <string name="intro2_heading">Are you an avid learner?</string>
