--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,12 @@
 
     <string name="drawer_item_log_out">Log Out</string>
 
+    <string name="help_intro">Welcome. Just tap on the circle to get help.</string>
+
     <string name="menu_help">Help</string>
+    <string name="menu_english">English</string>
+    <string name="menu_hindi">Hindi</string>
+    <string name="menu_tamil">Tamil</string>
     <string name="menu_sort_rating">Sort by Rating</string>
     <string name="menu_sort_distance">Sort by Distance</string>
     <string name="menu_sort_course_fee">Sort by Course Fee</string>
